loopfor.LoopStairs.scala.error
Compilation error:
LoopStairs:3: error: ')' expected but ';' found.
while (!estFaceMur();x<3) {
                    ^LoopStairs:3: error: ';' expected but ')' found.
while (!estFaceMur();x<3) {
                        ^