loopfor.LoopStairs.scala.code
var x: Int = 0
baisseBrosse()
while (!estFaceMur();x<3) {
  avance();
  x=x+1;
  if (estFaceMur()) {
    gauche();
    avance();
    droite();
  };
}